--- a/_posts/2015-11-23-template.md
+++ b/_posts/2015-11-23-template.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "제목은 여기에 작성합니다."
 date:   2015-11-23
-categories: jekyll update
+categories: 카테고리는 여기 작성합니다.
 ---
 
 # 여기서 부터는 마크다운 문법으로 작성하시면 됩니다.
