change template title to h2 tag

--- a/_posts/2015-11-23-template.md
+++ b/_posts/2015-11-23-template.md
@@ -6,7 +6,7 @@ date:   2015-11-23
 categories: 카테고리는 여기 작성합니다.
 ---
 
-# 여기서 부터는 마크다운 문법으로 작성하시면 됩니다.
+## 여기서 부터는 마크다운 문법으로 작성하시면 됩니다.
 
 ```
 $ echo 'hello world!'
