--- a/_posts/2015-11-24-who-knows.md
+++ b/_posts/2015-11-24-who-knows.md
@@ -2,7 +2,10 @@
 layout: post
 title:  "그 누구도 쓰지 않는 시스템은 어떻게 만들어 지는가?"
 date:   2015-11-24
-categories: jekyll update dev
+author: keen
+categories:
+- dev
+- 개발 문화
 ---
 
 최근에 일어난 일이다.
