post add depth change

--- a/_posts/2015-11-24-who-knows.md
+++ b/_posts/2015-11-24-who-knows.md
@@ -3,9 +3,7 @@ layout: post
 title:  "그 누구도 쓰지 않는 시스템은 어떻게 만들어 지는가?"
 date:   2015-11-24
 author: keen
-categories:
-- dev
-- 개발 문화
+categories: dev
 ---
 
 최근에 일어난 일이다.
