lfs 내용 약간 수정

--- a/_posts/2015-12-09-git-lfs.md
+++ b/_posts/2015-12-09-git-lfs.md
@@ -10,7 +10,7 @@ categories: git-lfs
 결과적으로는 꽤 오랜 시간이 걸려서야 lfs를 이용한 git 사용이 가능하도록 세팅하는데 성공했습니다. 이 삽질기는 gitlab에 깊이 관여되어 있어서 다음에 기회가 되면 공유하고 이번엔 삽질하며 공부한 git lfs 대해 아주 얇게 다뤄보려 합니다.
 
 ### LFS?
-lfs는 large file handling을 하기 위해 만들어진 오픈소스이고 github에서 채택한 상태입니다.
+lfs는 large file handling을 하기 위해 github 만든 오픈소스입니다.
 github에서는 lfs 도입 이유를 다음고 같이 설명하고 있습니다.
 
 >git과 같은 분산된 버전 컨트롤 시스템은 새롭고 좋은 workflows를 가능하게 합니다.
